# ROS-UAV

catkin_ws/devel/: setup.sh
catkin_ws/devel/include/aruco/: DetectedMarker.h  DetectedMarkerArray.h  marker_info.h
catkin_ws/devel/include/mofs/: FuzzyControl_IO.h  FuzzyControl_IORequest.h  FuzzyControl_IOResponse.h  input.h  output.h
catkin_ws/devel/include/vision_control_4_uav/: codeCommand.h
catkin_ws/devel/include/vrep_common/: ForceSensorData.h  JointSetStateData.h  ObjectGroupData.h  ProximitySensorData.h  VisionSensorData.h  VisionSensorDepthBuff.h  VrepInfo.h  simRosAddStatusbarMessageRequest.h  simRosAddStatusbarMessageResponse.h  simRosAppendStringSignalRequest.h  simRosAppendStringSignalResponse.h  simRosAuxiliaryConsoleCloseRequest.h  simRosAuxiliaryConsoleCloseResponse.h  simRosAuxiliaryConsoleOpenRequest.h  simRosAuxiliaryConsoleOpenResponse.h  simRosAuxiliaryConsolePrintRequest.h  simRosAuxiliaryConsolePrintResponse.h  simRosAuxiliaryConsoleShowRequest.h  simRosAuxiliaryConsoleShowResponse.h  simRosBreakForceSensorRequest.h  simRosBreakForceSensorResponse.h  simRosClearFloatSignalRequest.h  simRosClearFloatSignalResponse.h  simRosClearIntegerSignalRequest.h  simRosClearIntegerSignalResponse.h  simRosClearStringSignalRequest.h  simRosClearStringSignalResponse.h  simRosCloseSceneRequest.h  simRosCloseSceneResponse.h  simRosCopyPasteObjectsRequest.h  simRosCopyPasteObjectsResponse.h  simRosCreateDummyRequest.h  simRosCreateDummyResponse.h  simRosDisablePublisherRequest.h  simRosDisablePublisherResponse.h  simRosDisableSubscriberRequest.h  simRosDisableSubscriberResponse.h  simRosDisplayDialogRequest.h  simRosDisplayDialogResponse.h  simRosEnablePublisherRequest.h  (+157 more)
catkin_ws/devel/lib/aruco/: aruco_listener  aruco_run
catkin_ws/devel/lib/mofs/: mofs
catkin_ws/devel/lib/pkgconfig/: aruco.pc  mofs.pc  vision_control_4_uav.pc  vrep_common.pc  vrep_joy.pc  vrep_plugin.pc  vrep_plugin_skeleton.pc  vrep_skeleton_msg_and_srv.pc
catkin_ws/devel/lib/vision_control_4_uav/: keyTeleop_node  key_node  landing_node
catkin_ws/devel/lib/vrep_joy/: vrep_joy
catkin_ws/devel/share/aruco/cmake/: aruco-msg-extras.cmake  aruco-msg-paths.cmake  arucoConfig.cmake
catkin_ws/devel/share/mofs/cmake/: mofs-msg-paths.cmake  mofsConfig.cmake
catkin_ws/devel/share/vision_control_4_uav/cmake/: vision_control_4_uav-msg-extras.cmake  vision_control_4_uav-msg-paths.cmake  (+1 more)
catkin_ws/src/aruco/: .cproject  .directory  CMakeLists.txt  package.xml
catkin_ws/src/aruco/.csettings/: 0.1132661384_cdtBuildSystem  0.1132661384_org.eclipse.cdt.core.settings
catkin_ws/src/aruco/data/: ARfront.yml
catkin_ws/src/aruco/launch/: aruco_vrep_bottom.launch
catkin_ws/src/aruco/msg/: DetectedMarkerArray.msg
catkin_ws/src/aruco/src/: aruco_listen.cpp  aruco_run.cpp
catkin_ws/src/aruco/src/aruco/: marker.cpp  markerdetector.cpp  markerdetector.h
catkin_ws/src/ros_bubble_rob/src/: rosBubbleRob.cpp
catkin_ws/src/vision_control_4_uav/: .cproject  .project  .pydevproject  CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/vision_control_4_uav/.csettings/: 0.617767987_cdtBuildSystem  0.617767987_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.cross.base.617100501_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.cross.base.617100501_org.eclipse.cdt.core.settings
catkin_ws/src/vision_control_4_uav/include/: v_repConst.h
catkin_ws/src/vision_control_4_uav/launch/: vrep.launch  vrep_landing.launch
catkin_ws/src/vision_control_4_uav/msg/: codeCommand.msg
catkin_ws/src/vision_control_4_uav/src/: key_number_code.cpp  vrep_landing.cpp
catkin_ws/src/vrep_plugin/src/: ROS_server.cpp
catkin_ws/src/vrep_plugin_skeleton/src/: ros_server_skeleton.cpp  vrep_plugin_skeleton.cpp
(+45 files in other folders)
