<package>
  <!-- Package Metadata -->
  <name>aruco</name>
  <version>2.0.0</version>
  <description>

     The aruco is based on the C++ library called aruco from University of Cordoba

  </description>

  <maintainer email="miguel.olivaresmendez@uni.lu">Miguel A. Olivares-Mendez</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/aruco</url>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rosbag</build_depend>
  <run_depend>rosbag</run_depend>
  <!--depend package="opencv2"/-->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>OpenCV</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <export>
  <rosdoc config="rosdoc.yaml" />
</export>
</package>


